tests/pos/i871.scala
import scala.language.`3.0-migration`
trait Message {
  def first(x: Int)
  def second
}
