tests/neg/i871.scala
trait Message {
  def first(x: Int)
  def second
    1
}
